# TurboX-MultiDecoder2.0

./: readme.md
TurboX-MultiDecoder2.0/: build.gradle  local.properties  poc_edgebox1.jks  poc_edgebox2.jks  readme.txt  settings.gradle
TurboX-MultiDecoder2.0/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
TurboX-MultiDecoder2.0/app/src/androidTest/java/com/thundercomm/eBox/: ExampleInstrumentedTest.java
TurboX-MultiDecoder2.0/app/src/main/: AndroidManifest.xml
TurboX-MultiDecoder2.0/app/src/main/assets/: IVC_FShader_Preview.sh  IVC_VShader_Preview.sh  edgebox_gatewayConfig.txt  edgebox_gatewayConfig_template.txt  edgebox_smartRetailConfig.txt  getImagingSettings.xml  getNetworkInterface.xml  getProfilesReturn.txt  getSnapshotUri.xml  getSnapshotUridigest.xml  getStreamUriReturn.txt  getSystemDateAndTime.xml  getSystemDateAndTimeReturn.txt
TurboX-MultiDecoder2.0/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TurboX-MultiDecoder2.0/app/src/main/cpp/Affinity/: AffinityC.cpp  CMakeLists.txt
TurboX-MultiDecoder2.0/app/src/main/cpp/RtspClient/: CMakeLists.txt  TsRtspNative.cpp
TurboX-MultiDecoder2.0/app/src/main/cpp/RtspClient/include/: TsRtspNative.hh
TurboX-MultiDecoder2.0/app/src/main/cpp/UsageEnvironment/: CMakeLists.txt
TurboX-MultiDecoder2.0/app/src/main/cpp/groupsock/: CMakeLists.txt  GroupsockHelper.cpp
TurboX-MultiDecoder2.0/app/src/main/cpp/libbitmap/: BitmapJni.cpp  BitmapJni.h  CMakeLists.txt
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/: CMakeLists.txt  YuvConvert.cpp  YuvConvert.h  YuvJni.cpp  YuvJni.h
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/: .gn  Android.mk  BUILD.gn  DEPS  README.chromium  libyuv.gypi  yuv_android.sh
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/docs/: getting_started.md
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/infra/config/: cq.cfg
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/tools_libyuv/autoroller/: roll_deps.py
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/tools_libyuv/ubsan/: vptr_blacklist.txt
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/tools_libyuv/valgrind/: libyuv_tests.sh
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/unit_test/: planar_test.cc  scale_test.cc  unit_test.cc  unit_test.h
TurboX-MultiDecoder2.0/app/src/main/cpp/libyuv/libyuv/util/: psnr_main.cc  yuvconvert.cc
TurboX-MultiDecoder2.0/app/src/main/cpp/liveMedia/: CMakeLists.txt  GenericMediaServer.cpp  JPEGVideoRTPSource.cpp  MediaSession.cpp  MultiFramedRTPSource.cpp  RTPInterface.cpp  RTSPClient.cpp  RTSPClient.cpp.pre  RTSPServer.cpp
TurboX-MultiDecoder2.0/app/src/main/cpp/liveMedia/include/: RTSPClient.hh
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/: EventBusManager.java  Jni.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/AI/: DataInputFrame.java  OPencvInit.java  ObjectDectorTask.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Activity/: BaseActivity.java  MainActivity.java  RtspListActivity.java  RtspManagerActivity.java  SettingsActivity.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Adapter/: RtspItemAdapter.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Config/: GlobalConfig.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Constants/: Constants.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Data/: ObjectData.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Gl/: IVCGLLib.java  MyGLSurfaceView.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Log/: LogManager.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Model/: EventMessage.java  RtspItemCollection.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/Utils/: ActivityUtil.java  FileUtil.java  LogUtil.java  NetWorkSpeedUtils.java  PreferencesUtil.java  ToastUtils.java  WindowUtils.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/eBox/VIew/: FloatLayout.java  ObjectDetectFragment.java  PlayFragment.java  PopView.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/gateway/: GateWayContanst.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/gateway/data/: DeviceCollection.java  DeviceData.java  DeviceInfo.java  GatewayConfig.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/gateway/utils/: JsonTools.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/rtsp/: LocalVideoDecoder.java  TsAudioDecoder.java  TsDecodeThreadPool.java  TsIplayerStateListener.java  TsPcmData.java  TsPlayerDto.java  TsRealTimePlayer.java  TsRtspNative.java  TsVideoDecoder.java  TseDecodeType.java  TseRtPlayState.java
TurboX-MultiDecoder2.0/app/src/main/java/com/thundercomm/util/: MD5Util.java
TurboX-MultiDecoder2.0/app/src/main/jni/: CMakeLists.txt  TsRtspNativeJni.cpp  com_thundercomm_rtsp_TsRtspNativeJni.h
TurboX-MultiDecoder2.0/app/src/main/res/: dimens.xml
TurboX-MultiDecoder2.0/app/src/main/res/drawable/: dms_textview_style.xml
TurboX-MultiDecoder2.0/app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_rtsp_list.xml  activity_rtsp_manager.xml  activity_setting.xml  activity_setting2.xml  float_window_layout.xml  fragment_dms.xml  fragment_playe.xml  ll_illegalcar.xml  ll_illegalpedestrian.xml  ll_title_smartretail.xml  message_layout.xml  pedestrian_popview.xml  rtsp_edit_layout.xml  rtsp_item.xml
TurboX-MultiDecoder2.0/app/src/main/res/menu/: rtspmanagertoolbar_menu.xml  settingtoolbar_menu.xml
TurboX-MultiDecoder2.0/app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
TurboX-MultiDecoder2.0/app/src/main/res/xml/: root_preferences.xml
TurboX-MultiDecoder2.0/app/src/test/java/com/thundercomm/carDetect/: carPlateLicenseDetectTest.java
TurboX-MultiDecoder2.0/app/src/test/java/com/thundercomm/eBox/: ExampleUnitTest.java
TurboX-MultiDecoder2.0/gradle/wrapper/: gradle-wrapper.properties
doc/: TurboX-MultiDecoderApp_2.0-doc.docx  Video description.txt
(+2 files in other folders)
